commented out slideshow css

--- a/template/templates/unitedway/sass/slideshow-760.scss
+++ b/template/templates/unitedway/sass/slideshow-760.scss
@@ -1,20 +1,21 @@
-.mod_slideshow {
+// .mod_slideshow {
+// 	max-width: 100%;
 
-	.description {
-		display: block;
-	}
+// 	.description {
+// 		display: block;
+// 	}
 
-	.controls {
-		position: absolute;
-		right: 15px;
-		bottom: 8px;
+// 	.controls {
+// 		position: absolute;
+// 		right: 15px;
+// 		bottom: 8px;
 
-		> div {
-			background-size: 18px;
-			height: 18px;
-			width: 18px;
-			margin-left: 5px;
-			position: static;
-		}
-	}
-}
+// 		> div {
+// 			background-size: 18px;
+// 			height: 18px;
+// 			width: 18px;
+// 			margin-left: 5px;
+// 			position: static;
+// 		}
+// 	}
+// }
