--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -20,6 +20,11 @@
 		border-radius: 7px;
 		padding-left: 5px;
 		height: 26px;
+		color: $light-grey;
+
+		&:focus {
+			color: $text;
+		}
 	}
 	
 	button {
