dotted line bg added to category mod

--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -100,7 +100,8 @@
 		}
 	}
 
-		.custom {
+		.custom,
+		.category-module {
 			padding-top: 20px;
 			background: url('../images/divider_dotted.png') top center repeat-x;
 
