image border mixing added to random image mod

--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -68,6 +68,15 @@
 	text-align: right;
 }
 
+.module.random-image {
+	@include image-border;
+
+	img {
+		display: block;
+	}
+}
+
+//thermometer
 .module.thermometer {
 	.custom {
 		text-align: center;
