--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -162,5 +162,29 @@
 }
 
 .sitemap {
-	font-size: 16px;
+	font-size: 14px;
+
+	.menu {
+		margin: 0;
+
+		> li {
+
+			a, span {
+				color: $text;
+				padding-bottom: .5em;
+				display: inline-block;
+				*display: inline;
+				*zoom: 1;
+			}
+		}
+
+		ul {
+			margin: 0 0 .5em;
+			padding-left: 20px;
+
+			a {
+				color: $red;
+			}
+		}
+	}
 }
