--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -147,9 +147,15 @@
 	}
 	
 	&.mobile {
-		font-size: 22px;
+		font-size: 20px;
+		background-color: $dark-red;
+		border-bottom-right-radius: 4px;
+		border-bottom-left-radius: 4px;
+
+		height: 100%;
+		overflow-y: scroll;
 		-webkit-overflow-scrolling: touch;
-		
+
 		li {
 			line-height: 38px;
 		}
