--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -7,7 +7,7 @@ body, select, input, textarea {
 body {
 	font-size: .875em; // 14px
 	background-color: #aa0c04;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 * { 
