min height of 100% on html and body

--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -10,6 +10,10 @@ body {
 	overflow-x: hidden;
 }
 
+html, body {
+	min-height: 100%;
+}
+
 * { 
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
