--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -47,16 +47,13 @@ h2 {
 	padding-bottom: 0;
 }
 
-
+h1 { font-size: 18px; }
 
 h3 {
 	font-size: 16px;
 }
 
-h1 { font-size: 2em; }
-h4 { font-size: 1.4em; }
-h5 { font-size: 1.2em; }
-h6 { font-size: 1.0em; }
+h4 { font-size: 14px; }
 
 p {
 	margin-top: 0;
@@ -66,6 +63,7 @@ a, a:active, a:visited {
 	color: $red;
 	text-decoration: none;
 }
+
 a:hover {
 	color: $red;
 	text-decoration: underline;
