--- a/template/templates/unitedway/sass/_mixins.scss
+++ b/template/templates/unitedway/sass/_mixins.scss
@@ -7,6 +7,11 @@
 	& { zoom:1; }
 }
 
+@mixin image-border {
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, .15);
+    border: 4px solid #fff;
+}
+
 @mixin transition($settings) {
 	-webkit-transition: $settings;
 	-moz-transition: $settings;
