--- a/template/templates/unitedway/css/template.css
+++ b/template/templates/unitedway/css/template.css
@@ -949,9 +949,13 @@ div.container
       margin-top: 0; }
 
 .module.sidebar {
-  margin-top: 1em; }
+  margin-top: 1em;
+  padding-bottom: 1em; }
   .module.sidebar.bg-logo-red .custom, .module.sidebar.bg-logo-blue .custom, .module.sidebar.bg-logo-yellow .custom {
     min-height: 125px; }
+
+.module.bottom {
+  padding-bottom: 20px; }
 
 #copyright {
   margin-bottom: 1em;
@@ -1129,7 +1133,12 @@ div.container
 
 a.read-more {
   color: #5f6062;
-  font-weight: bold; }
+  font-weight: bold;
+  position: absolute;
+  bottom: 0; }
+  a.read-more:hover {
+    color: #ee2e24;
+    text-decoration: none; }
 
 .image-border {
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
@@ -1328,10 +1337,6 @@ a.read-more {
   .tablet-hidden, .mobile-hidden {
     display: none; }
 
-  a.read-more {
-    position: absolute;
-    bottom: 0; }
-
   .module.logo {
     width: auto;
     float: left;
@@ -1376,8 +1381,7 @@ a.read-more {
   .module.bottom {
     width: 50%;
     padding-left: 2.127659574%;
-    float: left;
-    padding-bottom: 40px; }
+    float: left; }
     .module.bottom:first-child {
       width: 100%; } }
 @media only screen and (min-width: 760px) {
