mobile menu layout fixed

--- a/template/templates/unitedway/sass/layout-760.scss
+++ b/template/templates/unitedway/sass/layout-760.scss
@@ -1,3 +1,13 @@
+#mobile-menu {
+	display: none;
+}
+
+#wrapper {
+	body.menu-open & {
+		position: relative;
+	}
+}
+
 #footer {
 	text-align: left;
 }
