--- a/template/templates/unitedway/sass/layout.scss
+++ b/template/templates/unitedway/sass/layout.scss
@@ -5,23 +5,29 @@
 }
 
 #mobile-menu {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	bottom: 100%;
 	width: 100%;
 	overflow: hidden;
-	z-index: 0;
-	background-color: $dark-red;
-	padding: 10px;
+	z-index: 10;
+	margin-top: 30px;
 
 	@include transition(bottom .3s ease-in-out);
 
+	& > div {
+		height: 100%;
+		overflow-y: scroll;
+		-webkit-overflow-scrolling: touch;
+		background-color: white;
+		border-bottom-right-radius: 4px;
+		border-bottom-left-radius: 4px;
+		padding: 0 10px;
+	}
+
 	body.menu-open & {
-		top: 0;
 		bottom: 0;
-		z-index: 10;
-		margin-top: 30px;
 	}
 }
 
@@ -33,6 +39,10 @@
 	z-index: 5;
 	box-shadow: 0 0 30px #333;
 	min-height: 100%;
+
+	body.menu-open & {
+		position: fixed;
+	}
 }
 
 #header {
