--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -172,23 +172,16 @@
 	
 	&.mobile {
 		font-size: 20px;
-		background-color: $dark-red;
-		border-bottom-right-radius: 4px;
-		border-bottom-left-radius: 4px;
-
-		height: 100%;
-		overflow-y: scroll;
-		-webkit-overflow-scrolling: touch;
+		padding: 0;
 
 		li {
 			line-height: 38px;
 		}
-		
+
 		a {
-			color: #ffffff;
+			color: $text;
 		}
 	}
-	
 }
 
 .sitemap {
