--- a/template/templates/unitedway/css/template.css
+++ b/template/templates/unitedway/css/template.css
@@ -775,25 +775,29 @@ div.container
   padding: 0 2.5%; }
 
 #mobile-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 100%;
   width: 100%;
   overflow: hidden;
-  z-index: 0;
-  background-color: #b5100b;
-  padding: 10px;
+  z-index: 10;
+  margin-top: 30px;
   -webkit-transition: bottom 0.3s ease-in-out;
   -moz-transition: bottom 0.3s ease-in-out;
   -o-transition: bottom 0.3s ease-in-out;
   -ms-transition: bottom 0.3s ease-in-out;
   transition: bottom 0.3s ease-in-out; }
+  #mobile-menu > div {
+    height: 100%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    background-color: white;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    padding: 0 10px; }
   body.menu-open #mobile-menu {
-    top: 0;
-    bottom: 0;
-    z-index: 10;
-    margin-top: 30px; }
+    bottom: 0; }
 
 #wrapper {
   position: relative;
@@ -803,6 +807,8 @@ div.container
   z-index: 5;
   box-shadow: 0 0 30px #333;
   min-height: 100%; }
+  body.menu-open #wrapper {
+    position: fixed; }
 
 #header {
   padding: 0 0 15px;
@@ -972,7 +978,10 @@ div.container
   position: absolute;
   top: 1px;
   height: 28px;
-  width: 40px; }
+  width: 40px;
+  z-index: 10; }
+  body.menu-open .module.show-menu {
+    position: fixed; }
 
 .category-module li h4 {
   padding: 0;
@@ -1078,16 +1087,11 @@ div.container
   list-style: none; }
 .vmenu.mobile {
   font-size: 20px;
-  background-color: #b5100b;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  height: 100%;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch; }
+  padding: 0; }
   .vmenu.mobile li {
     line-height: 38px; }
   .vmenu.mobile a {
-    color: #ffffff; }
+    color: #4e4e4e; }
 
 .sitemap {
   font-size: 14px; }
@@ -1385,6 +1389,12 @@ a.read-more {
     .module.bottom:first-child {
       width: 100%; } }
 @media only screen and (min-width: 760px) {
+  #mobile-menu {
+    display: none; }
+
+  body.menu-open #wrapper {
+    position: relative; }
+
   #footer {
     text-align: left; }
 
