margin-top on logo mod in ie7

--- a/template/templates/unitedway/sass/modules-960.scss
+++ b/template/templates/unitedway/sass/modules-960.scss
@@ -11,6 +11,14 @@
 		background: url('../images/icon_twitter-bird.png') left center no-repeat;
 	}
 }
+
+.module.logo {
+
+	.ie7 & {
+		margin-top: 15px;
+	}
+}
+
 .module.sidebar {
 	margin-top: 0;
 	.home & {
