--- a/template/templates/unitedway/sass/modules-480.scss
+++ b/template/templates/unitedway/sass/modules-480.scss
@@ -14,11 +14,11 @@
 	
 	input {
 		height: 37px;
+		line-height: 1em;
+		padding: 11px 0 10px 10px;
 		border: 2px solid #efefef;
 		border-radius: 14px;
 		width: 180px;
-		
-		padding-left: 10px;
 	}
 	
 	button {
