--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -21,7 +21,6 @@
 
 	.menu > li > a,
 	.menu > li > span {
-		display: block;
 		cursor: pointer;
 
 		span {
@@ -33,6 +32,10 @@
 		list-style: none;
 		padding-left: 0;
 		margin: 0;
+	}
+
+	a {
+		display: block;
 	}
 }
 
