--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -61,26 +61,18 @@
 			}
 
 		}
-	}
 
-	// .last {
-	// 	float: right;
+		&.last {
+			float: right;
 		
-	// 	a {	
-	// 		color: $red;
-	// 		&:hover {
-	// 			color: black;
-	// 		}
-	// 	}
-
-	// 	li.last {
-	// 		float: none;
-
-	// 		a {
-	// 			color: white;
-	// 		}
-	// 	}
-	// }
+			a {	
+				color: $red;
+				&:hover {
+					color: black;
+				}
+			}
+		}
+	}
 
 	li > div { // submenu
 		display: none;
@@ -116,13 +108,16 @@
 				color: white;
 			}
 		}
-	}
-		
-	a {
-		color: #5f6062;
-		&:hover {
-			color: black;
-			text-decoration: none;
+
+		.last {
+			float: none;
+
+			a {
+				color: white;
+				&:hover {
+					color: white;
+				}
+			}
 		}
 	}
 }
