--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -168,13 +168,13 @@
 .vmenu {
 
 	.menu {
-		margin: 1em 0;
+		margin: 0;
 		padding: 0;
 		list-style: none;
 	}
 
 	ul ul { // submenus
-		margin: 0.5em 0 1em 1em;
+		margin: 0;
 		list-style: none;
 	}
 	
