search results styling

--- a/template/templates/unitedway/sass/layout.scss
+++ b/template/templates/unitedway/sass/layout.scss
@@ -110,8 +110,8 @@
 	padding: 10px 0 0;
 
 	.result-text {
-		padding: 10px;
-		margin: 0 0 2em;
+		padding: 0 10px;
+		margin: 1em 0 2em;
 		background-color: whitesmoke;
 	}
 }
