--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -4,6 +4,10 @@ body, select, input, textarea {
 	font-family: "myriad-pro", Helvetica, Arial, sans-serif;
 }
 
+select, input, textarea {
+	font-size: 16px;
+}
+
 body {
 	font-size: .875em; // 14px
 	background-color: #aa0c04;
