--- a/template/templates/unitedway/sass/_mixins.scss
+++ b/template/templates/unitedway/sass/_mixins.scss
@@ -10,6 +10,11 @@
 @mixin image-border {
     box-shadow: 0px 0px 8px rgba(0, 0, 0, .15);
     border: 4px solid #fff;
+
+    .ie8 &,
+    .ie7 & {
+        border: 2px solid #eeeeee;
+    }
 }
 
 @mixin transition($settings) {
