import of gallery scss

--- a/template/templates/unitedway/sass/template-ie.min.scss
+++ b/template/templates/unitedway/sass/template-ie.min.scss
@@ -19,7 +19,7 @@
 @import "blog";
 @import "com_content";
 @import "thermometer";
-@import "slideshow";
+@import "gallery";
 
 // @media queries
 // @import "grid-320";
@@ -29,14 +29,15 @@
 @import "layout-480";
 @import "modules-480";
 @import "styles-480";
+@import "gallery-480";
 // @import "grid-760";
 @import "layout-760";
 @import "modules-760";
 @import "styles-760";
-@import "slideshow-760";
+@import "gallery-760";
 @import "layout-960";
 @import "modules-960";
 @import "menu-960";
 @import "styles-960";
-@import "slideshow-960";
+@import "gallery-960";
 // don't load 1100, assume std desktop
