--- a/template/templates/unitedway/sass/thermometer.scss
+++ b/template/templates/unitedway/sass/thermometer.scss
@@ -48,10 +48,9 @@
 	}
 
 	.mercury {
-		bottom: 0px;
+		bottom: 5px;
+		top: 5px;
 		left: 11px;
-		height: 100%;
-		padding: 5px 0;
 		width: 11px;
 
 		> div {
@@ -60,7 +59,6 @@
 			left: 0;
 			bottom: 0px;
 			width: 11px;
-			padding-top: 10px;
 		}
 	}
 }
