moved mobile class out of vmenu class

--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -177,47 +177,48 @@
 		margin: 0;
 		list-style: none;
 	}
-	
-	&.mobile {
-		font-size: 14px;
-		color: $dark-grey;
+}
+
+.mobile {
+	font-size: 14px;
+	color: $dark-grey;
+	padding: 0;
+
+	li {
+		line-height: 38px;
+	}
+
+	.menu > li {
+
+		> a,
+		> span {
+			color: #ffffff;
+			background: $red;
+			background-image: -moz-linear-gradient(top, #c80f05, #f72015);
+			background-image: -o-linear-gradient(top, #c80f05, #f72015);
+			background-image: -webkit-linear-gradient(top, #c80f05, #f72015);
+			background-image: linear-gradient(top, #c80f05, #f72015);
+			padding-left: 13px;
+			display: block;
+			border-bottom: 1px solid #de6f69;
+		}
+	}
+
+	ul ul {
+		margin: 0;
 		padding: 0;
 
-		li {
-			line-height: 38px;
+		a,
+		span {
+			color: $text;
+			padding-left: 35px;
+			display: block;
+			border-bottom: 1px solid #ededed;
 		}
+	}
 
-		.menu > li {
-
-			> a,
-			> span {
-				color: #ffffff;
-				background-image: -moz-linear-gradient(top, #c80f05, #f72015);
-				background-image: -o-linear-gradient(top, #c80f05, #f72015);
-				background-image: -webkit-linear-gradient(top, #c80f05, #f72015);
-				background-image: linear-gradient(top, #c80f05, #f72015);
-				padding-left: 13px;
-				display: block;
-				border-bottom: 1px solid #de6f69;
-			}
-		}
-
-		ul ul {
-			margin: 0;
-			padding: 0;
-
-			a,
-			span {
-				color: $text;
-				padding-left: 35px;
-				display: block;
-				border-bottom: 1px solid #ededed;
-			}
-		}
-
-		&:first-child {
-			border-top: 1px solid #de6f69;
-		}
+	&:first-child {
+		border-top: 1px solid #de6f69;
 	}
 }
 
