--- a/template/templates/unitedway/sass/modules-960.scss
+++ b/template/templates/unitedway/sass/modules-960.scss
@@ -19,14 +19,12 @@
 	}
 }
 
-.module.sidebar {
+.module.sidebar,
+.full .module.sidebar {
 	margin: 0 0 1em;
+	width: 100%;		
+	margin-left: 0;
 	.home & {
 		margin-top: 1em;
-	}
-
-	&:nth-child(n) {
-		width: 100%;
-		margin-left: 0;
 	}
 }
