--- a/template/templates/unitedway/css/template.css
+++ b/template/templates/unitedway/css/template.css
@@ -1388,7 +1388,9 @@ a.read-more {
 
 .flickr-gallery .photo {
   width: 100%;
-  padding: 0 5px 10px; }
+  padding: 0 5px;
+  margin: 5px 0;
+  overflow-y: hidden; }
   .flickr-gallery .photo img {
     display: block; }
 
@@ -1472,7 +1474,8 @@ a.read-more {
 
   .flickr-gallery .photo {
     width: 50%;
-    float: left; } }
+    float: left;
+    height: 163px; } }
 @media only screen and (min-width: 760px) {
   #mobile-menu {
     display: none; }
@@ -1533,7 +1536,8 @@ a.read-more {
     display: none; }
 
   .flickr-gallery .photo {
-    width: 25%; } }
+    width: 25%;
+    height: 128px; } }
 @media only screen and (min-width: 960px) {
   .container {
     width: 960px;
@@ -1580,4 +1584,5 @@ a.read-more {
     display: none; }
 
   .flickr-gallery .photo {
-    width: 33.33%; } }
+    width: 33.33%;
+    height: 147px; } }
