--- a/template/templates/unitedway/css/donations.css
+++ b/template/templates/unitedway/css/donations.css
@@ -544,12 +544,15 @@ label {
   font-weight: normal;
   float: left; }
 
+body {
+  color: #4e4e4e; }
+
 .DonorInformationTextboxLabel {
   float: left;
-  text-align: left;
   padding-right: 3px;
   min-width: 150px;
-  font-weight: bold; }
+  font-weight: bold;
+  font-size: 14px; }
 
 .DonorInformationTextbox {
   float: left; }
@@ -560,8 +563,27 @@ h2,
   margin: 1em 0 15px;
   font-size: 18px; }
 
+input[type="text"] {
+  padding: 4px;
+  border: 1px solid lightGrey;
+  width: 250px; }
+
+input[type="radio"] {
+  margin: 0 5px; }
+
+input[type="button"],
+input[type="submit"] {
+  border: 0;
+  padding: 4px; }
+
 #DonationTypes {
   width: 190px; }
 
 #DonationAmount {
   width: 100%; }
+
+#ctl00_Body_cxNumPaySection {
+  padding: 0 !important; }
+
+#Instructions {
+  font-size: 14px !important; }
