padding on search bar and italic font by default, normal on focus

--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -23,9 +23,11 @@
 		padding-left: 5px;
 		height: 26px;
 		color: $light-grey;
+		font-style: italic;
 
 		&:focus {
 			color: $text;
+			font-style: normal;
 		}
 	}
 	
