--- a/template/templates/unitedway/sass/modules-480.scss
+++ b/template/templates/unitedway/sass/modules-480.scss
@@ -33,18 +33,18 @@
 	}
 }
 
-.module.feed-twitter {
+// .module.feed-twitter {
 	
-	.twitter-title {
-		float: left;
-		margin: 0 20px 10px 0;
-	}
+// 	.twitter-title {
+// 		float: left;
+// 		margin: 0 20px 10px 0;
+// 	}
 	
-	.twitter-tweet {
-		max-width: 580px;
-		margin-left: 165px;
-	}
-}
+// 	.twitter-tweet {
+// 		max-width: 580px;
+// 		margin-left: 165px;
+// 	}
+// }
 
 .module.sidebar,
 .module.bottom {
